# powerup

./: CMakeLists.txt  README.md
inc/powerup/: cpp17_backports.hpp  legacy_iterator.hpp  number_ranges.hpp  numrange.hpp  type_traits.hpp
include/powerup/: numrange.hpp
test/: CMakeLists.txt  cpp17_backports.cpp  legacy_iterator.cpp  type_traits.cpp
